foo/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: foo
  labels:
    app: foo

spec:
  selector:
    app: foo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
