foo/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule

metadata:
  name: foo
  namespace: foo

spec:
  host: foo
  subsets:
    - name: stable
      labels:
        app: foo
    - name: canary
      labels:
        app: foo
