foo/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: foo
  namespace: foo

spec:
  hosts:
    - foo
  http:
    - name: primary
      route:
        - destination:
            host: foo
            subset: stable
          weight: 100
        - destination:
            host: foo
            subset: canary
          weight: 0
